<resources>
    <string name="app_name">EThing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_data">Data</string>
    <string name="nav_apps">Apps</string>
    <string name="nav_more">More</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rules">Rules</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_general_url">Url</string>


    <string name="preference_general_file_key">com.amezerette.ething.PREFERENCE_GENERAL</string>


</resources>
