<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/nav_devices" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/nav_data" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_menu_apps"
            android:title="@string/nav_apps"></item>


    </group>
    <item android:title="@string/nav_more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_rules"
                    android:icon="@drawable/ic_menu_rules"
                    android:title="@string/nav_rules" />
            </group>
        </menu>
    </item>

</menu>
